--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "typescript": "^4.4.3"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "express": "^4.17.1",
       "sqlite3": "^5.0.2",
       "typeorm": "^0.2.37"
